--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -110,7 +110,7 @@
             <h4 id="input">ALL Profil Doppelzylinder</h4>
             @using (Html.BeginForm("Index", "Home", FormMethod.Get))
             {
-                <table class="table table-bordered">
+                <table class="table table-bordered table-sm">
                     <tbody>
                         <tr id="Table">
                             <th>CompanyName</th>
