--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -148,7 +148,7 @@
                             </div>
                             <div style="gap: 10px;display: flex;margin-left: 50px;">
                                     <button type="button"  onclick="CylinderMinus(@d,'@item.Price')" class="btn btn-success">-</button>
-                                    <input style="border: none;max-width: 30px;" id="countSchlusse-@d" type="number" min="0" value="@ViewBag.CounterTur[@elemNum]" />
+                                    <input style="border: none;max-width: 30px;" name="TurCounter" id="countSchlusse-@d" type="number" min="0" value="@ViewBag.CounterTur[@elemNum]" />
                                     <button type="button" onclick="CylinderPlus(@d,'@item.Price')" class="btn btn-success">+</button>
                             </div>
                               @*   <div style="margin-left: 20px;">
