--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -55,6 +55,11 @@
             @RenderBody()
         </main>
     </div>
+
+
+        @Html.Partial("_Footer")
+ 
+
      <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" async></script>
     <script src="~/lib/jquery/dist/jquery.min.js" async></script>
     
