--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -125,15 +125,15 @@
                 {
                     <div class="form-group">
                         <label class="control-label">System Name</label>
-                        <input name="NSysteam" value="@list.NameSysteam" id="opt" class="form-control" />
+                        <input required name="NSysteam" value="@list.NameSysteam" id="opt" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label class="control-label">KeyKost</label>
-                        <input name="keyCost" value="@list.Price" id="opt" class="form-control" />
+                        <input required name="keyCost" value="@list.Price" id="opt" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label class="control-label">Desctiptions Systeam</label>
-                        <textarea name="descriptionsSysteam"  class="form-control" id="exampleFormControlTextarea2">@list.DesctiptionsSysteam</textarea>
+                        <textarea required name="descriptionsSysteam" class="form-control" id="exampleFormControlTextarea2">@list.DesctiptionsSysteam</textarea>
                     </div>
                 }
                 <hr />
